--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "google-maps": "^3.2.1",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.5"
   },
   "devDependencies": {
